# sdl2-synth

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  effects.c  effects.h  gui.c  gui.h  index.html  main.c  midi.c  midi.h  midi_in.cpp  midi_in.h  osc.c  osc.h  synth.c  synth.h  voice.c  voice.h
.github/workflows/: os.yml  web.yml
renoise/: sdl2-synth-01-bank-select-modulation.xrdp  sdl2-synth-02-effects-performance-controls.xrdp  sdl2-synth-03-channel-mode.xrdp  sdl2-synth.xrns
src/: adsr.c  adsr.h  analog_filter.c  analog_filter.h  app.c  app.h  arpeggiator.c  arpeggiator.h  fx.c  fx.h  gui.c  gui.cpp  gui.h  lfo.c  lfo.h  main.c  microui.c  microui.h  midi.c  midi.h  mixer.c  mixer.h  osc.c  osc.h  oscilloscope.c  oscilloscope.h  ring_modulator.c  ring_modulator.h  synth.c  synth.h  utils.c  utils.h  voice.c  voice.h
